Refactor configuration files to remove PostgreSQL dialect settings and enhance transaction management in application services.
- Removed PostgreSQL dialect configuration from multiple service YAML files.
- Improved transaction handling in the ApplicationEventPublisher by registering synchronization for event publishing after transaction commits.
- Added default values using @Builder.Default in various model classes to ensure consistent initialization.