@@ -5,6 +5,7 @@ import com.sameer.job.client.JobAiClient;
 import com.sameer.job.domain.JobStatus;
 import com.sameer.job.dto.JobRequest;
 import com.sameer.job.dto.JobResponse;
+import com.sameer.job.dto.ai.SearchEnhanceRequest;
 import com.sameer.job.dto.response.CompanyResponse;
 import com.sameer.job.exception.ConflictException;
 import com.sameer.job.exception.NotFoundException;
@@ -15,7 +16,6 @@ import com.sameer.job.modal.JobSkill;
 import com.sameer.job.modal.JobTag;
 import com.sameer.job.modal.embeddable.JobLocation;
 import com.sameer.job.modal.embeddable.SalaryRange;
-import com.sameer.job.dto.ai.SearchEnhanceRequest;
 import com.sameer.job.payload.JobSearchRequest;
 import com.sameer.job.payload.NaturalLanguageSearchMapper;
 import com.sameer.job.repository.JobRepository;
@@ -27,7 +27,8 @@ import com.sameer.job.service.JobTagService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
+import org.springframework.transaction.PlatformTransactionManager;
+import org.springframework.transaction.support.TransactionTemplate;
 
 import java.time.LocalDateTime;
 import java.util.Collections;
@@ -38,7 +39,6 @@ import java.util.stream.Collectors;
 @Slf4j
 @Service
 @RequiredArgsConstructor
-@Transactional
 public class JobServiceImpl implements JobService {
 
     private final JobRepository jobRepository;
@@ -47,76 +47,73 @@ public class JobServiceImpl implements JobService {
     private final JobTagService jobTagService;
     private final CompanyClient companyClient;
     private final JobAiClient jobAiClient;
-
+    private final PlatformTransactionManager transactionManager;
 
     @Override
     public JobResponse createJob(Long employerId, JobRequest req) throws Exception {
-
-        JobCategory category = jobCategoryService.getCategoryEntityById(req.getCategoryId());
-
-        Set<JobSkill> skills = req.getSkillIds() != null ?
-                jobSkillService.getSkillByIds(req.getSkillIds())
-                : Collections.emptySet();
-
-        Set<JobTag> tags = req.getTagIds() != null ?
-                jobTagService.getTagsByIds(req.getTagIds()) : Collections.emptySet();
-
         CompanyResponse companyResponse = companyClient.getMyCompany(employerId);
+        JobResponse mapped = writeTx().execute(status -> {
+            JobCategory category = jobCategoryService.getCategoryEntityById(req.getCategoryId());
+            Set<JobSkill> skills = req.getSkillIds() != null
+                    ? jobSkillService.getSkillByIds(req.getSkillIds())
+                    : Collections.emptySet();
+            Set<JobTag> tags = req.getTagIds() != null
+                    ? resolveTags(req.getTagIds())
+                    : Collections.emptySet();
 
-        Long companyId = companyResponse.getId();
+            Job job = Job.builder()
+                         .title(req.getTitle())
+                         .description(req.getDescription())
+                         .requirements(req.getRequirements())
+                         .responsibilities(req.getResponsibilities())
+                         .benefits(req.getBenefits())
+                         .companyId(companyResponse.getId())
+                         .employerId(employerId)
+                         .category(category)
+                         .skills(skills)
+                         .tags(tags)
+                         .location(buildLocation(req))
+                         .salaryRange(buildSalaryRange(req))
+                         .jobType(req.getJobType())
+                         .workMode(req.getWorkMode())
+                         .experienceLevel(req.getExperienceLevel())
+                         .opening(req.getOpenings() != null ? req.getOpenings() : 1)
+                         .applicationDeadline(req.getApplicationDeadline())
+                         .expiresAt(req.getExpiresAt())
+                         .active(true)
+                         .status(JobStatus.DRAFT)
+                         .build();
 
-        Job job = Job.builder()
-                     .title(req.getTitle())
-                     .description(req.getDescription())
-                     .requirements(req.getRequirements())
-                     .responsibilities(req.getResponsibilities())
-                     .benefits(req.getBenefits())
-                     .companyId(companyId)
-                     .employerId(employerId)
-                     .category(category)
-                     .skills(skills)
-                     .tags(tags)
-                     .location(buildLocation(req))
-                     .salaryRange(buildSalaryRange(req))
-                     .jobType(req.getJobType())
-                     .workMode(req.getWorkMode())
-                     .experienceLevel(req.getExperienceLevel())
-                     .opening(req.getOpenings() != null ? req.getOpenings() : 1)
-                     .applicationDeadline(req.getApplicationDeadline())
-                     .expiresAt(req.getExpiresAt())
-                     .active(true)
-                     .status(JobStatus.DRAFT)
-                     .build();
-
-        Job savedJob = jobRepository.save(job);
-
-        return convertToResponse(savedJob);
+            return JobMapper.toResponse(jobRepository.save(job), companyResponse);
+        });
+        return mapped;
     }
 
     @Override
-    @Transactional(readOnly = true)
     public JobResponse getJobById(Long id, Long userId, String role) throws Exception {
-        Job job = jobRepository.findById(id).orElseThrow(
-                () -> new NotFoundException("Job not found with ID: " + id)
-        );
-        if (job.getStatus() == JobStatus.DRAFT && !canViewDraft(job, userId, role)) {
-            throw new NotFoundException("Job not found with ID: " + id);
-        }
-        return convertToResponse(job);
+        MappedJob mapped = readTx().execute(status -> {
+            Job job = jobRepository.findById(id).orElseThrow(
+                    () -> new NotFoundException("Job not found with ID: " + id)
+            );
+            if (job.getStatus() == JobStatus.DRAFT && !canViewDraft(job, userId, role)) {
+                throw new NotFoundException("Job not found with ID: " + id);
+            }
+            return new MappedJob(JobMapper.toResponse(job, null), job.getCompanyId());
+        });
+        return withCompany(mapped);
     }
 
     @Override
-    @Transactional(readOnly = true)
     public List<JobResponse> getJobs(JobSearchRequest jobSearchRequest) {
-        List<Job> jobs = jobRepository.findAll(JobSpecification.build(jobSearchRequest));
-
-        return jobs.stream().map(
-                this::convertToResponse
-        ).collect(Collectors.toList());
+        List<MappedJob> mapped = readTx().execute(status -> jobRepository
+                .findAll(JobSpecification.build(jobSearchRequest))
+                .stream()
+                .map(job -> new MappedJob(JobMapper.toResponse(job, null), job.getCompanyId()))
+                .collect(Collectors.toList()));
+        return mapped.stream().map(this::withCompany).toList();
     }
 
     @Override
-    @Transactional(readOnly = true)
     public List<JobResponse> searchByNaturalLanguage(String query) throws Exception {
         JobSearchRequest mapped;
         try {
@@ -133,118 +130,130 @@ public class JobServiceImpl implements JobService {
     }
 
     @Override
-    @Transactional(readOnly = true)
     public List<JobResponse> getJobsByCompany(Long companyId) {
-        List<Job> jobs = jobRepository.findByCompanyId(companyId);
-
-        return jobs.stream()
+        List<MappedJob> mapped = readTx().execute(status -> jobRepository.findByCompanyId(companyId).stream()
                    .filter(job -> job.getStatus() == JobStatus.OPEN)
-                   .map(this::convertToResponse)
-                   .collect(Collectors.toList());
+                   .map(job -> new MappedJob(JobMapper.toResponse(job, null), job.getCompanyId()))
+                   .collect(Collectors.toList()));
+        return mapped.stream().map(this::withCompany).toList();
     }
 
     @Override
     public JobResponse updateJob(Long jobId, Long employerId, JobRequest req) throws Exception {
-        Job job = jobRepository.findById(jobId).orElseThrow(
-                () -> new NotFoundException("Job not found with ID: " + jobId)
-        );
-        assertEmployer(job, employerId);
+        MappedJob mapped = writeTx().execute(status -> {
+            Job job = jobRepository.findById(jobId).orElseThrow(
+                    () -> new NotFoundException("Job not found with ID: " + jobId)
+            );
+            assertEmployer(job, employerId);
 
-        JobCategory category = jobCategoryService.getCategoryEntityById(req.getCategoryId());
+            JobCategory category = jobCategoryService.getCategoryEntityById(req.getCategoryId());
+            Set<JobSkill> skills = req.getSkillIds() != null
+                    ? jobSkillService.getSkillByIds(req.getSkillIds())
+                    : Collections.emptySet();
+            Set<JobTag> tags = req.getTagIds() != null
+                    ? resolveTags(req.getTagIds())
+                    : Collections.emptySet();
 
-        Set<JobSkill> skills = req.getSkillIds() != null ?
-                jobSkillService.getSkillByIds(req.getSkillIds())
-                : Collections.emptySet();
+            job.setTitle(req.getTitle());
+            job.setDescription(req.getDescription());
+            job.setRequirements(req.getRequirements());
+            job.setResponsibilities(req.getResponsibilities());
+            job.setBenefits(req.getBenefits());
+            job.setCategory(category);
+            job.setSkills(skills);
+            job.setTags(tags);
+            job.setLocation(buildLocation(req));
+            job.setSalaryRange(buildSalaryRange(req));
+            job.setJobType(req.getJobType());
+            job.setWorkMode(req.getWorkMode());
+            job.setExperienceLevel(req.getExperienceLevel());
+            job.setOpening(req.getOpenings() != null ? req.getOpenings() : job.getOpening());
+            job.setApplicationDeadline(req.getApplicationDeadline());
+            job.setExpiresAt(req.getExpiresAt());
 
-        Set<JobTag> tags = req.getTagIds() != null ?
-                jobTagService.getTagsByIds(req.getTagIds()) : Collections.emptySet();
-
-        job.setTitle(req.getTitle());
-        job.setDescription(req.getDescription());
-        job.setRequirements(req.getRequirements());
-        job.setResponsibilities(req.getResponsibilities());
-        job.setBenefits(req.getBenefits());
-        job.setCategory(category);
-        job.setSkills(skills);
-        job.setTags(tags);
-
-        job.setLocation(buildLocation(req));
-
-        job.setSalaryRange(buildSalaryRange(req));
-
-        job.setJobType(req.getJobType());
-        job.setWorkMode(req.getWorkMode());
-        job.setExperienceLevel(req.getExperienceLevel());
-
-        job.setOpening(req.getOpenings() != null ? req.getOpenings() : job.getOpening());
-
-        job.setApplicationDeadline(req.getApplicationDeadline());
-        job.setExpiresAt(req.getExpiresAt());
-
-        Job updated = jobRepository.save(job);
-
-        return convertToResponse(updated);
+            Job updated = jobRepository.save(job);
+            return new MappedJob(JobMapper.toResponse(updated, null), updated.getCompanyId());
+        });
+        return withCompany(mapped);
     }
 
     @Override
     public JobResponse publishJob(Long jobId, Long employerId) throws Exception {
-        Job job = jobRepository.findById(jobId).orElseThrow(
-                () -> new NotFoundException("Job not found with ID: " + jobId)
-        );
-        assertEmployer(job, employerId);
-
-        if (job.getStatus() == JobStatus.CLOSED || job.getStatus() == JobStatus.EXPIRED) {
-            throw new ConflictException("Job is already closed/expired");
-        }
-
-        job.setStatus(JobStatus.OPEN);
-        job.setPublishedAt(LocalDateTime.now());
-        job.setActive(true);
-
-        Job savedJob = jobRepository.save(job);
-        return convertToResponse(savedJob);
-
+        MappedJob mapped = writeTx().execute(status -> {
+            Job job = jobRepository.findById(jobId).orElseThrow(
+                    () -> new NotFoundException("Job not found with ID: " + jobId)
+            );
+            assertEmployer(job, employerId);
+            if (job.getStatus() == JobStatus.CLOSED || job.getStatus() == JobStatus.EXPIRED) {
+                throw new ConflictException("Job is already closed/expired");
+            }
+            job.setStatus(JobStatus.OPEN);
+            job.setPublishedAt(LocalDateTime.now());
+            job.setActive(true);
+            Job savedJob = jobRepository.save(job);
+            return new MappedJob(JobMapper.toResponse(savedJob, null), savedJob.getCompanyId());
+        });
+        return withCompany(mapped);
     }
 
     @Override
     public JobResponse closeJob(Long jobId, Long employerId) throws Exception {
-        Job job = jobRepository.findById(jobId).orElseThrow(
-                () -> new NotFoundException("Job not found with ID: " + jobId)
-        );
-        assertEmployer(job, employerId);
-
-        job.setStatus(JobStatus.CLOSED);
-        job.setClosedAt(LocalDateTime.now());
-        job.setActive(false);
-
-        Job savedJob = jobRepository.save(job);
-        return convertToResponse(savedJob);
-
+        MappedJob mapped = writeTx().execute(status -> {
+            Job job = jobRepository.findById(jobId).orElseThrow(
+                    () -> new NotFoundException("Job not found with ID: " + jobId)
+            );
+            assertEmployer(job, employerId);
+            job.setStatus(JobStatus.CLOSED);
+            job.setClosedAt(LocalDateTime.now());
+            job.setActive(false);
+            Job savedJob = jobRepository.save(job);
+            return new MappedJob(JobMapper.toResponse(savedJob, null), savedJob.getCompanyId());
+        });
+        return withCompany(mapped);
     }
 
     @Override
     public void deleteJob(Long jobId, Long employerId) throws Exception {
-        Job job = jobRepository.findById(jobId).orElseThrow(
-                () -> new NotFoundException("Job not found with ID: " + jobId)
-        );
-        assertEmployer(job, employerId);
-
-        jobRepository.delete(job);
+        writeTx().executeWithoutResult(status -> {
+            Job job = jobRepository.findById(jobId).orElseThrow(
+                    () -> new NotFoundException("Job not found with ID: " + jobId)
+            );
+            assertEmployer(job, employerId);
+            jobRepository.delete(job);
+        });
     }
 
     @Override
-    @Transactional(readOnly = true)
     public List<JobResponse> getAllJobsAdmin() {
-        return jobRepository.findAll().stream().map(
-                this::convertToResponse
-        ).collect(Collectors.toList());
+        List<MappedJob> mapped = readTx().execute(status -> jobRepository.findAll().stream()
+                .map(job -> new MappedJob(JobMapper.toResponse(job, null), job.getCompanyId()))
+                .collect(Collectors.toList()));
+        return mapped.stream().map(this::withCompany).toList();
     }
 
+    private JobResponse withCompany(MappedJob mapped) {
+        mapped.response().setCompany(companyClient.getCompanyById(mapped.companyId()));
+        return mapped.response();
+    }
 
-    private JobResponse convertToResponse(Job savedJob) {
-        CompanyResponse companyResponse = companyClient.getCompanyById(savedJob.getCompanyId());
+    private Set<JobTag> resolveTags(Set<Long> ids) {
+        try {
+            return jobTagService.getTagsByIds(ids);
+        } catch (RuntimeException e) {
+            throw e;
+        } catch (Exception e) {
+            throw new IllegalStateException(e);
+        }
+    }
 
-        return JobMapper.toResponse(savedJob, companyResponse);
+    private TransactionTemplate writeTx() {
+        return new TransactionTemplate(transactionManager);
+    }
+
+    private TransactionTemplate readTx() {
+        TransactionTemplate tx = new TransactionTemplate(transactionManager);
+        tx.setReadOnly(true);
+        return tx;
     }
 
     private SalaryRange buildSalaryRange(JobRequest req) {
@@ -264,9 +273,10 @@ public class JobServiceImpl implements JobService {
                           .build();
     }
 
-    private void assertEmployer(Job job, Long employerId) throws Exception {
+    private void assertEmployer(Job job, Long employerId) {
         if (!job.getEmployerId().equals(employerId)) {
-            throw new com.sameer.job.exception.ForbiddenException("You are not the employer who posted this job: " + job.getId());
+            throw new com.sameer.job.exception.ForbiddenException(
+                    "You are not the employer who posted this job: " + job.getId());
         }
     }
 
@@ -274,5 +284,8 @@ public class JobServiceImpl implements JobService {
         boolean owner = userId != null && userId.equals(job.getEmployerId());
         boolean admin = role != null && role.contains("ROLE_ADMIN");
         return owner || admin;
+    }
+
+    private record MappedJob(JobResponse response, Long companyId) {
     }
 }
